<resources>
    <string name="app_name">EASY KITA</string>
    <string name="login">LOGIN</string>
    <string name="ausstattung">Ausstattung</string>
    <string name="home">HOME</string>
    <string name="auswahl_bestätigen">Auswahl bestätigen</string>
    <string name="ea">EA: 03.04.2018\nErziehungsziele</string>
    <string name="eg">EG: 19.04.2018\nESU-Vorgespräch</string>
    <string name="teilnehmer">Teilnehmer:</string>
    <string name="teilnahme">Teilnahme:</string>
    <string name="ja">Ja</string>
    <string name="nein">Nein</string>
    <string name="teilnahmebestätigung">Teilnahmebestätigung</string>
    <string name="teilnahmebestätigungen">Teilnahmebestätigungen</string>
    <string name="egxy">Elterngespräch\nXY</string>
    <string name="eaxy">Elternabend\nXY</string>
    <string name="eltern">Eltern</string>
    <string name="elternabend">Elternabend</string>
    <string name="elterngespraech">Elterngespräch</string>
    <string name="empfaenger">Empfänger:</string>
    <string name="thema">Thema:</string>
    <string name="titel">Titel:</string>
    <string name="datum">Datum:</string>
    <string name="uhrzeit">Uhrzeit:</string>
    <string name="datum1">Datum (1):</string>
    <string name="uhrzeit1">Uhrzeit (1):</string>
    <string name="datum2">Datum (2):</string>
    <string name="uhrzeit2">Uhrzeit (2):</string>
    <string name="nachricht_versenden">Nachricht versenden</string>
    <string name="veranstaltungen">Veranstaltungen</string>
    <string name="sommerfest">Sommerfest\n27.06.2018</string>
    <string name="veranst_erstellen">Veranstaltung erstellen</string>
    <string name="alle">Alle Kinder</string>
    <string name="Ballakow">Ballakow, Paul</string>
    <string name="Chiurazzi">Chiurazzi, Antonella</string>
    <string name="Dold">Dold, Lea-Sophie</string>
    <string name="Griese">Griese, Jan</string>
    <string name="Leone">Leone, Lara</string>
    <string name="Mandel">Mandel, Luca</string>
    <string name="Nowara">Nowara, Rebekka</string>
    <string name="Reuter">Reuter, Dominik</string>
    <string name="Schwarz">Schwarz, Liam</string>
    <string name="Steig">Steig, Evan</string>
    <string name="windeln">Windeln</string>
    <string name="taschentuecher">Taschentücher</string>
    <string name="hausschuhe">Hausschuhe</string>
    <string name="sitzkissen">Sitzkissen</string>
    <string name="handtuch">Handtuch</string>
    <string name="tasse">Tasse</string>
    <string name="turnschlaeppchen">Turnschläppchen</string>
    <string name="sporthose">Sporthose</string>
    <string name="wechselkleidung">Wechselkleidung</string>
</resources>
