<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.rapha.kita_app.Elterngespraech_Select">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="409dp"
        android:layout_height="62dp"
        android:gravity="center"
        android:text="@string/elterngespraech"
        android:textColor="@color/colorWhite"
        android:textSize="39sp"
        android:background="@drawable/my_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button1"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:text="@string/home"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlack"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141"
        app:layout_constraintHorizontal_bias="0.498" />

    <Button
        android:id="@+id/button2"
        android:layout_width="194dp"
        android:layout_height="41dp"
        android:text="@string/auswahl_bestätigen"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951"
        app:layout_constraintHorizontal_bias="0.497" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="290dp"
        android:layout_height="380dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.609">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:background="@drawable/border_checkbox"
                android:button="@drawable/rounded_checkbox"
                android:gravity="center"
                android:onClick="selectItem"
                android:text="@string/Ballakow"
                android:textSize="17dp" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:background="@drawable/border_checkbox"
                android:button="@drawable/rounded_checkbox"
                android:gravity="center"
                android:onClick="selectItem"
                android:text="@string/Chiurazzi"
                android:textSize="17dp" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:background="@drawable/border_checkbox"
                android:button="@drawable/rounded_checkbox"
                android:gravity="center"
                android:onClick="selectItem"
                android:text="@string/Dold"
                android:textSize="17dp" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:background="@drawable/border_checkbox"
                android:button="@drawable/rounded_checkbox"
                android:gravity="center"
                android:onClick="selectItem"
                android:text="@string/Griese"
                android:textSize="17dp" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:background="@drawable/border_checkbox"
                android:button="@drawable/rounded_checkbox"
                android:gravity="center"
                android:onClick="selectItem"
                android:text="@string/Leone"
                android:textSize="17dp" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:background="@drawable/border_checkbox"
                android:button="@drawable/rounded_checkbox"
                android:gravity="center"
                android:onClick="selectItem"
                android:text="@string/Mandel"
                android:textSize="17dp" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:background="@drawable/border_checkbox"
                android:button="@drawable/rounded_checkbox"
                android:gravity="center"
                android:onClick="selectItem"
                android:text="@string/Nowara"
                android:textSize="17dp" />

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:background="@drawable/border_checkbox"
                android:button="@drawable/rounded_checkbox"
                android:gravity="center"
                android:onClick="selectItem"
                android:text="@string/Reuter"
                android:textSize="17dp" />

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:background="@drawable/border_checkbox"
                android:button="@drawable/rounded_checkbox"
                android:gravity="center"
                android:onClick="selectItem"
                android:text="@string/Schwarz"
                android:textSize="17dp" />

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:background="@drawable/border_checkbox"
                android:button="@drawable/rounded_checkbox"
                android:gravity="center"
                android:onClick="selectItem"
                android:text="@string/Steig"
                android:textSize="17dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>