<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.rapha.kita_app.AusstattungExt">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="409dp"
        android:layout_height="62dp"
        android:gravity="center"
        android:text="@string/ausstattung"
        android:textColor="@color/colorWhite"
        android:textSize="39sp"
        android:background="@drawable/my_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="114dp"
        android:layout_height="374dp"
        android:gravity="center"
        android:text="Fehler"
        android:textColor="@color/colorBlack"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.567"
        app:layout_constraintHorizontal_bias="0.056" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="206dp"
        android:layout_height="371dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.573"
        app:layout_constraintHorizontal_bias="0.887"
        tools:layout_editor_absoluteX="183dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/handtuch"
                android:textSize="17dp"
                android:gravity="center"
                android:background="@drawable/border_checkbox"
                android:onClick="selectElement"/>

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/hausschuhe"
                android:textSize="17dp"
                android:gravity="center"
                android:background="@drawable/border_checkbox"
                android:onClick="selectElement"/>

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/sitzkissen"
                android:textSize="17dp"
                android:gravity="center"
                android:background="@drawable/border_checkbox"
                android:onClick="selectElement"/>

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/sporthose"
                android:textSize="17dp"
                android:gravity="center"
                android:background="@drawable/border_checkbox"
                android:onClick="selectElement"/>

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/border_checkbox"
                android:gravity="center"
                android:text="@string/taschentuecher"
                android:textSize="17dp"
                android:onClick="selectElement"/>

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/tasse"
                android:textSize="17dp"
                android:background="@drawable/border_checkbox"
                android:onClick="selectElement"/>

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/turnschlaeppchen"
                android:textSize="17dp"
                android:gravity="center"
                android:background="@drawable/border_checkbox"
                android:onClick="selectElement"/>

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/wechselkleidung"
                android:textSize="17dp"
                android:gravity="center"
                android:background="@drawable/border_checkbox"
                android:onClick="selectElement"/>

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/windeln"
                android:textSize="17dp"
                android:gravity="center"
                android:background="@drawable/border_checkbox"
                android:onClick="selectElement"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button1"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:text="@string/home"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlack"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141"
        app:layout_constraintHorizontal_bias="0.498" />

    <Button
        android:id="@+id/button2"
        android:layout_width="194dp"
        android:layout_height="41dp"
        android:text="@string/auswahl_bestätigen"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />

</android.support.constraint.ConstraintLayout>