<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.rapha.kita_app.Elt_Rueckmeld_EG">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="409dp"
        android:layout_height="62dp"
        android:gravity="center"
        android:text="@string/eg"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        android:background="@drawable/my_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button1"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:text="@string/home"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlack"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141"
        app:layout_constraintHorizontal_bias="0.498" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Teilnehmeranzahl: 1"
        android:textColor="@color/colorBlack"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264"
        app:layout_constraintHorizontal_bias="0.069" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teilnehmer"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346"
        app:layout_constraintHorizontal_bias="0.054" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teilnahme"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352"
        app:layout_constraintHorizontal_bias="0.924" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/Mandel"
        android:textColor="@color/colorBlack"
        android:textSize="22sp"
        android:background="@drawable/border_checkbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405"
        app:layout_constraintHorizontal_bias="0.105" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/ja"
        android:textColor="@color/colorGreen"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405"
        app:layout_constraintHorizontal_bias="0.996" />

</android.support.constraint.ConstraintLayout>
