<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.rapha.kita_app.Veranstaltungen_Choice">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="409dp"
        android:layout_height="62dp"
        android:gravity="center"
        android:text="@string/veranstaltungen"
        android:textColor="@color/colorWhite"
        android:textSize="39sp"
        android:background="@drawable/my_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:text="@string/home"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlack"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141"
        app:layout_constraintHorizontal_bias="0.498" />

    <Button
        android:id="@+id/button1"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/veranst_erstellen"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:textSize="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.447"
        app:layout_constraintHorizontal_bias="0.495" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/teilnahmebestätigungen"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:textSize="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631"
        app:layout_constraintHorizontal_bias="0.495" />

</android.support.constraint.ConstraintLayout>
